<resources>
    <string name="app_name">Rapeize Intercom</string>
    <string name="button_check_in">Check In</string>
    <string name="button_check_out">Check Out</string>
    <string name="button_list_users">List Online Users</string>
    <string name="button_open">Open Door</string>
    <string name="welcome">Welcome costumer!</string>
    <string name="welcome_question">What is your need today?</string>
    <string name="button_text">ToDo: Implement list</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_login">Sign in</string>
    <string name="userID">User ID</string>
    <string name="attemptsLeft">Attempts Left:</string>
    <string name="signIn">Sign In</string>
    <string name="signOut">Sign Out</string>
    <string name="user_welcome">Welcome!\nYou\'re logged in as user.</string>
    <string name="user_question">What do you want to do?</string>
    <string name="title_activity_list_users">Active Users</string>
    <string name="title_activity_user">User</string>
    <string name="title_activity_admin">Admin</string>
    <string name="title_activity_admin_create_user">Create User</string>
    <string name="title_activity_admin_update_user">Update User</string>
    <string name="title_activity_admin_delete_user">Delete User</string>
    <string name="title_activity_admin_read_user">Read User</string>
    <string name="adminWelcome">Welcome admin!</string>
    <string name="adminQuestion">What is your desire?</string>
    <string name="buttonAdminSignOut">Sign Out</string>
    <string name="buttonAdminCreate">Create</string>
    <string name="buttonAdminUpdate">Update</string>
    <string name="buttonAdminDelete">Delete</string>
    <string name="buttonAdminRead">Read</string>
    <string name="buttonAdminOpen">Open Door</string>
    <string name="createUserID">User ID</string>
    <string name="createUserPassword">Password</string>
    <string name="createUserIsAdmin">Admin</string>
    <string name="createUserName">Name</string>
    <string name="createUserPhone">Phone</string>
    <string name="createUserEmail">Email</string>
    <string name="createUserBeginWeekDay">Begin week day</string>
    <string name="createUserEndWeekDay">End week day</string>
    <string name="createUserBeginTime">Begin Time</string>
    <string name="createUserEndTime">End Time</string>
    <string name="buttonCreateUser">Create User</string>
    <string name="updateUserID">User ID</string>
    <string name="updateUserPassword">New Password</string>
    <string name="updateUserIsAdmin">New Admin</string>
    <string name="updateUserName">New Name</string>
    <string name="updateUserPhone">New Phone</string>
    <string name="updateUserEmail">New Email</string>
    <string name="updateUserBeginWeekDay">New Begin week day</string>
    <string name="updateUserEndWeekDay">New End week day</string>
    <string name="updateUserBeginTime">New Begin Time</string>
    <string name="updateUserEndTime">New End Time</string>
    <string name="buttonUpdateUser">Update User</string>
    <string name="deleteUserID">ID to be deleted</string>
    <string name="buttonDeleteUser">Delete User</string>
    <string name="readUserID">ID to be read</string>
    <string name="buttonReadUser">Read User</string>
    <string name="usersOnline">List of users online:</string>
</resources>
